azure-aks-kubernetes-masterclass/20-Azure-AKS-HTTP-Application-Routing/kube-manifests/03-Ingress-HTTPApplicationRouting-ExternalDNS.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    # Add ingress.class as addon-http-application-routing
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: 603304bd1fa24e2eabce.centralus.aksapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
